[package]
name    = "showit"
version = "0.1.0"
edition = "2021"
license = "0BSD"
[dependencies]
anyhow        = "1.0.55"
clipboard-win = { version = "4.4.1", features = ["std"] }
eframe        = "0.17.0"
fastrand      = "1.7.0"
image         = { version = "0.24.1", features = ["png"], default-features = false }
serde         = { version = "1.0.136", features = ["derive"] }
serde_json    = "1.0.79"
url           = "2.2.2"
reqwest       = { version = "0.11.9", features = ["blocking", "json", "multipart"] }
oneshot       = { version = "0.1.3", features = ["std"], default-features = false }

tiny_http     = { version = "0.11.0", optional = true }
bytes = "1.1.0"

[features]
mock = ["tiny_http"]
